@@ -1,5 +1,13 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-keyword-model.c: (keyword_model_get_iter),
+	(keyword_model_iter_n_children), (dh_keyword_model_filter): No
+	need to go through the hit list constantly in the tree model
+	implementation, just keep the result that we already have after
+	updating the list.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/Makefile.am: The assistant is now used by DhBase so move it
 	to the library.
 
